[tool.poetry]
name = "hiiri-peli"
version = "0.1.0"
description = "python harjoittelua"
authors = ["Heli Eronen <herojonen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
